# ws2812_driver

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  start.sh
.devcontainer/startup-scripts/: 20-kvm.sh
modules/: build_all.sh
modules/usb-ws2812/: Makefile  dev_packets.h  doxyfile  usb_ws2812.c
payloads/buildroot_config/: mini_linux.tar.xz
rp2040/: CMakeLists.txt  build.sh  main.c  tusb_config.h  usb_descriptors.c  usb_packets.h  usb_send_test.py
scripts/: common.sh  create_gdbinit.sh  make_buildroot-base_from_scratch.sh  prepare_environment.sh  save_buildroot_config.sh  set_usb_privileges.sh
user_programs/: CMakeLists.txt  compile.sh  compile_ohne_mount.sh
user_programs/examples/: led_daten_2_bis_3_blau  led_daten_red_3_bis_6  led_daten_test  pattern1  pattern2  runexamples.sh
user_programs/src/usb-ws2812/: CMakeLists.txt  main.c_  readme.md  ws2812-test-client.c
user_programs/src/usb-ws2812-lib/: CMakeLists.txt  doxyfile  usb_ws2812_lib.c  usb_ws2812_lib.h
user_programs/src/usb-ws2812-minimal-example/: CMakeLists.txt  cmake_install.cmake  main.c
